Navegación por token y redirecciona a login al exp

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -16,8 +16,8 @@
       class="{{ menuItem.class }} nav-item"
     >
       <a [routerLink]="[menuItem.path]">
-        <i class="tim-icons  {{ menuItem.icon }}"></i>
-        <p>{{ menuItem.title }} Prueba</p>
+        <i class="{{ menuItem.icon }}"></i>
+        <p>{{ menuItem.title }}</p>
       </a>
     </li>
   </ul>
