--- a/src/app/examples/pages/map/map.component.html
+++ b/src/app/examples/pages/map/map.component.html
@@ -1,14 +1,13 @@
-
-<div class=" content">
-  <div class=" row">
-    <div class=" col-md-12">
-      <div class=" card card-plain">
-        <div class=" card-header">Google Maps</div>
-        <div class=" card-body">
-          <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2136.140541198687!2d-100.29150034791526!3d25.785560252780513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa9ade0f14ba3a398!2zMjXCsDQ3JzEwLjQiTiAxMDDCsDE3JzMzLjAiVw!5e0!3m2!1ses-419!2smx!4v1663032167635!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class=" map" id="map"></div>
+<div class=" row">
+  <div class=" col-md-12">
+    <div class=" card card-plain">
+      <div class=" card-header">Google Maps</div>
+      <div class=" card-body">
+        <iframe class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2136.140541198687!2d-100.29150034791526!3d25.785560252780513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa9ade0f14ba3a398!2zMjXCsDQ3JzEwLjQiTiAxMDDCsDE3JzMzLjAiVw!5e0!3m2!1ses-419!2smx!4v1663032167635!5m2!1ses-419!2smx"
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
+      <div class=" map" id="map"></div>
     </div>
   </div>
 </div>
