--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -16,10 +16,10 @@
       </li>
     </ul>
     <div class=" copyright">
-      &copy; {{ test | date: "yyyy" }} made with
-      <i class=" tim-icons icon-heart-2"> </i> by
+      &copy; {{ test | date: "yyyy" }} Diseño hecho con
+      <i class=" tim-icons icon-heart-2"> </i> por
       <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Creative Tim </a>
-      for a better web.
+      para un mejor sitio. Desarrollador <a href="https://github.com/ingbame" target="_blank"> Baruch Medina </a>
     </div>
   </div>
 </footer>
