--- a/src/app/layout/pages/layout.component.html
+++ b/src/app/layout/pages/layout.component.html
@@ -4,7 +4,9 @@
   </div>
   <div class="main-panel">
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
+    <div class=" content">
+      <router-outlet></router-outlet>
+    </div>
     <app-footer></app-footer>
   </div>
 </div>
@@ -15,7 +17,7 @@
     </a>
     <ul ngbDropdownMenu>
       <li class=" header-title">Sidebar Background</li>
-      <li class=" adjustments-line">
+      <!-- <li class=" adjustments-line">
         <a class=" switch-trigger background-color" href="javascript:void(0)">
           <div class=" badge-colors text-center">
             <span
@@ -34,7 +36,7 @@
           </div>
           <div class=" clearfix"></div>
         </a>
-      </li>
+      </li> -->
       <li class=" adjustments-line text-center color-change">
         <span class=" color-label"> LIGHT MODE </span>
         <span class=" badge light-badge mr-2" (click)="changeDashboardColor('white-content')"> </span>
