--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+.custom-checkbox-form{
+  font-family: system-ui, sans-serif;
+  font-size: 1.05rem;
+  line-height: 1.1;
+  display: grid;
+  grid-template-columns: 1.1em auto;
+  gap: 0.5em;
+}
+.custom-checkbox-label{
+  margin-top: 0.4em;
+}
