creación y validaciín de modelo

--- a/src/app/application/components/members/member-modal.component.html
+++ b/src/app/application/components/members/member-modal.component.html
@@ -35,7 +35,9 @@
           </div>
           <div class="col-4">
             <label for="txtBirthday" class="form-label">Cumpleaños</label>
-            <input type="date" class="form-control" id="txtBirthday" name="txtBirthday" [ngModel]="MemberModel.birthday | date:'yyyy-MM-dd'" #myBirthday [value]="MemberModel.birthday | date:'yyyy-MM-dd'">
+            <input type="date" class="form-control" id="txtBirthday" name="txtBirthday"
+              [ngModel]="MemberModel.birthday | date:'yyyy-MM-dd'" #myBirthday
+              [value]="MemberModel.birthday | date:'yyyy-MM-dd'">
           </div>
           <div class="col-md-6">
             <label for="txtCellPhoneNumber" class="form-label">Celular</label>
@@ -49,36 +51,42 @@
             <label for="bTSideDesc" class="form-label">Bateo/Lanzamiento</label>
             <select name="bTSideDesc" class="form-select" [(ngModel)]="MemberModel.btSideDesc">
               <option selected>Seleccione</option>
-              <option *ngFor="let item of lstBattingThrowingSides" [attr.data-id]="item.btsideId" [attr.data-key-val]="item.keyValue">{{item.btsideDesc}}</option>
+              <option *ngFor="let item of lstBattingThrowingSides" [attr.data-id]="item.btsideId"
+                [attr.data-key-val]="item.keyValue">{{item.btsideDesc}}</option>
             </select>
           </div>
           <div class="col-md-6">
             <label for="dtCreatedDate" class="form-label">Fecha de creación</label>
             <input type="datetime" class="form-control" name="dtCreatedDate" disabled
-              [ngModel]="MemberModel.createdDate | date:'dd/MM/yyyy HH:mm:ss'" [value]="MemberModel.createdDate | date:'dd/MM/yyyy HH:mm:ss'">
+              [ngModel]="MemberModel.createdDate | date:'dd/MM/yyyy HH:mm:ss'"
+              [value]="MemberModel.createdDate | date:'dd/MM/yyyy HH:mm:ss'">
           </div>
-          <div class="col-4">
-            <div class="custom-checkbox-form">
-              <input type="checkbox" value="" name="cbxCanEdit" [(ngModel)]="MemberModel.canEdit">
-              <label class="custom-checkbox-label" for="cbxCanEdit">
-                Puede editar
-              </label>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="custom-checkbox-form">
-              <input type="checkbox" value="" name="cbxIsVerified" disabled [(ngModel)]="MemberModel.isVerified">
-              <label class="custom-checkbox-label" for="cbxIsVerified">
-                Verificado
-              </label>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="custom-checkbox-form">
-              <input type="checkbox" value="" name="cbxIsActive" [(ngModel)]="MemberModel.isActive">
-              <label class="custom-checkbox-label" for="cbxIsActive">
-                Activo
-              </label>
+          <div class="col-12" *ngIf="!(this.actionStr == MemberActionEnum.add)">
+            <div class="row">
+              <div class="col-4">
+                <div class="custom-checkbox-form">
+                  <input type="checkbox" value="" name="cbxCanEdit" [(ngModel)]="MemberModel.canEdit">
+                  <label class="custom-checkbox-label" for="cbxCanEdit">
+                    Puede editar
+                  </label>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="custom-checkbox-form">
+                  <input type="checkbox" value="" name="cbxIsVerified" disabled [(ngModel)]="MemberModel.isVerified">
+                  <label class="custom-checkbox-label" for="cbxIsVerified">
+                    Verificado
+                  </label>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="custom-checkbox-form">
+                  <input type="checkbox" value="" name="cbxIsActive" [(ngModel)]="MemberModel.isActive">
+                  <label class="custom-checkbox-label" for="cbxIsActive">
+                    Activo
+                  </label>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-12 text-right">
