--- a/src/app/application/pages/members/members.component.html
+++ b/src/app/application/pages/members/members.component.html
@@ -1,4 +1,4 @@
-<app-member-modal [actionStr]="actionStr" [MemberModel]="MemberModel"></app-member-modal>
+<app-member-modal [actionStr]="actionStr" [MemberModel]="MemberModel" [idToEdit]="idToEdit"></app-member-modal>
 
 <div class=" row">
   <div class=" col-md-12">
