--- a/src/app/finance/pages/movements/movements.component.html
+++ b/src/app/finance/pages/movements/movements.component.html
@@ -1,1 +1,42 @@
-<p>movements works!</p>
+<app-new-modal></app-new-modal>
+<app-detail-modal></app-detail-modal>
+
+<div class=" row">
+  <div class=" col-md-12">
+    <div class=" card">
+      <div class=" card-header">
+        <div class="row">
+          <div class="col col-mb-11">
+            <h1 class=" card-title">Saldo (Fondo): {{total | currency}}</h1>
+          </div>
+          <div class="col col-mb-1 text-right">
+            <input class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#movementModal" type="button"
+              value="Agregar movimiento" (click)="OpenAddMovementModel()">
+          </div>
+        </div>
+      </div>
+      <div class=" card-body">
+        <div class=" table-responsive">
+          <table class=" table tablesorter" id="">
+            <thead class=" text-primary">
+              <tr>
+                <th>Fecha</th>
+                <th>Tipo </th>
+                <th>Concepto</th>
+                <th>Monto</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let movement of movements">
+                <td class=" text-center"><a data-bs-toggle="modal" data-bs-target="#detailModal" (click)="onOpenDetailMovement(movement)">{{movement.movementDate | date:'dd/MM/yyyy'}}</a></td>
+                <td>{{movement.movementTypeKey}}</td>
+                <td>{{movement.conceptDesc}}</td>
+                <td class="text-rigth">{{movement.amount}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
