--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,20 @@
     background-color: #D1D1D1 !important;
   }
 }
+.neutral-currency{
+  color: white !important;
+}
+.positive-currency{
+  color: green !important;
+}
+.negative-currency{
+  color: red !important;
+}
+.link-Kodiaks{
+  color: aqua;
+  text-decoration: underline;
+}
+.link-Kodiaks:hover{
+  color: orange !important;
+  text-decoration: underline;
+}
