--- a/src/app/auth/pages/login.component.html
+++ b/src/app/auth/pages/login.component.html
@@ -21,25 +21,25 @@
 
         <div class="p-t-31 p-b-9">
           <span class="txt1">
-            Username
+            Celular
           </span>
         </div>
-        <div class="wrap-input100 validate-input" data-validate="Username is required">
+        <div class="wrap-input100 validate-input" data-validate="Celular requerido">
           <input class="input100" type="text" name="userName" [(ngModel)]="logUsr.userName"
-            (ngModelChange)="Validate($event, 'userName', 'email')">
+            (ngModelChange)="Validate($event, 'userName', 'phone')" required>
           <span class="focus-input100"></span>
         </div>
 
         <div class="p-t-13 p-b-9">
           <span class="txt1">
-            Password
+            Contraseña
           </span>
 
           <a href="#" class="txt2 bo1 m-l-5">
-            Forgot?
+            ¿Olvidaste tu contraseña?
           </a>
         </div>
-        <div class="wrap-input100 validate-input" data-validate="Password is required">
+        <div class="wrap-input100 validate-input" data-validate="Contraseña requerida">
           <input class="input100" type="password" name="password" [(ngModel)]="logUsr.password"
             (ngModelChange)="Validate($event,'password')">
           <span class="focus-input100"></span>
