Eliminar console.log y otros

--- a/src/app/finance/pages/movements/movements.component.html
+++ b/src/app/finance/pages/movements/movements.component.html
@@ -1,5 +1,5 @@
-<app-new-modal [movement]="movement"></app-new-modal>
-<app-detail-modal [movement]="movement"></app-detail-modal>
+<app-new-modal [movement]="movement" [saveEvent]="updateDataEvent"></app-new-modal>
+<app-detail-modal [movement]="movementEdit"></app-detail-modal>
 
 <div class=" row">
   <div class=" col-md-12">
